crates/ml2_mem/tests/ui/memstruct_on_enum.stderr
error: MemStruct only supports structs with named fields
 --> tests/ui/memstruct_on_enum.rs:8:6
  |
8 | enum NotAStruct {
  |      ^^^^^^^^^^
